--- a/assets/css/test.css
+++ b/assets/css/test.css
@@ -1,4 +1,4 @@
-header {
+header, footer {
     /*background: url('/assets/images/fond-bleu2.png') no-repeat center center;*/
     /*background-size: 100%;*/
     background-image: url("/assets/images/fond-bleu.jpg");
@@ -13,7 +13,9 @@ body{
     font-size: 1.2em;
 }
 
-
+a{
+    color: #eeeeee;
+}
 
 
 
@@ -26,11 +28,15 @@ body{
 
 
 
+
 h3{
     font-family: "Amatic SC";
     font-size: 3em;
 }
 
+footer
+{  font-family: "Amatic SC";
+   }
 
 section {
     height: 900px;
@@ -65,6 +71,10 @@ section {
     background-color:#449d69;
 }
 
+#content {
+    background-color: #ffffff;
+    min-height: 300px;
+}
 
 
 
