--- a/assets/css/creche.css
+++ b/assets/css/creche.css
@@ -7,7 +7,7 @@ body {
 }
 
 body{
-    background-color: #eeeeee;
+    background-color: #ffffff;
     font-family: "Roboto";
     font-size: 1.2em;
 }
@@ -42,5 +42,6 @@ h3{
 .container {
     margin-right: auto;
     margin-left: auto;
-    max-width: 1500px;
+    /*max-width: 1500px;*/
+    width: 100%;
 }
