rayures h4 title et css dynamique

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -34,6 +34,7 @@ a{
 h3{
     font-family: "Amatic SC";
     font-size: 3em;
+
 }
 
 footer
@@ -150,4 +151,10 @@ p{
 h4{
     margin-top: 1em;
     text-transform: uppercase;
+}
+
+
+.paragraph-title{
+    display: flex;
+    width: 100%;;
 }
