--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -78,7 +78,19 @@ section {
     background-color: #ffffff;
     min-height: 300px;
 }
+ul{
+    list-style: none;
+    margin-bottom: 14px;
+}
 
+li {
+    margin: 0 0 7px 0;
+    padding-left: 1em;
+}
+li:nth-child(1) { border-left: 5px solid #d51254;}
+li:nth-child(2) { border-left: 5px solid #2a6796;}
+li:nth-child(3) { border-left: 5px solid #449d69;}
+li:nth-child(4) { border-left: 5px solid #f8a10d;}
 
 
 /*Bootstrap override*/
@@ -139,11 +151,16 @@ p{
     /*font-family: "caviar_dreams" !important;*/
     font-family:"Roboto";
     /*color: rgb(102, 102, 102) !important;*/
-    text-align: center !important;
-    margin: 1em;
-    padding: 0.5em;
+    text-align: justify;
+    margin: 0.5em;
+    padding: 0.1em;
     /*padding: 20px;*/
     /*padding-bottom: 20px;*/
+}
+
+
+h3,h4,h5{
+    margin: .5em 0 .5em 0;
 }
 
 
@@ -157,4 +174,29 @@ h4{
 .paragraph-title{
     display: flex;
     width: 100%;;
+}
+
+
+
+
+blockquote {
+    background: #f9f9f9;
+    border-left: 10px solid #ccc;
+    border-color: #449d69;
+    margin: 1.5em 10px;
+    padding: 0.5em 10px;
+    quotes: "\201C""\201D""\2018""\2019";
+    max-width: 50%;
+    margin-left: 3em;
+}
+blockquote:before {
+    color: #ccc;
+    content: open-quote;
+    font-size: 4em;
+    line-height: 0.1em;
+    margin-right: 0.25em;
+    vertical-align: -0.4em;
+}
+blockquote p {
+    display: inline;
 }
