--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -87,10 +87,10 @@ li {
     margin: 0 0 7px 0;
     padding-left: 1em;
 }
-li:nth-child(1) { border-left: 5px solid #d51254;}
-li:nth-child(2) { border-left: 5px solid #2a6796;}
-li:nth-child(3) { border-left: 5px solid #449d69;}
-li:nth-child(4) { border-left: 5px solid #f8a10d;}
+main li:nth-child(1) { border-left: 5px solid #d51254;}
+main li:nth-child(2) { border-left: 5px solid #2a6796;}
+main li:nth-child(3) { border-left: 5px solid #449d69;}
+main li:nth-child(4) { border-left: 5px solid #f8a10d;}
 
 
 /*Bootstrap override*/
@@ -116,7 +116,7 @@ li:nth-child(4) { border-left: 5px solid #f8a10d;}
     border-color: #dddddd;
 }
 
-li.nav-item > h2,div.dropdown a> h2{
+nav li.nav-item > h2,nav div.dropdown a> h2{
     font-family: "Amatic SC";
     font-size: 2.6em;
     color:#ffffff;
