--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -200,3 +200,8 @@ blockquote:before {
 blockquote p {
     display: inline;
 }
+
+img.float-left{
+    height: 200px;
+    margin: 10px 10px 10px 10px;
+}
